# LS_SDK

./: .gitignore  .gitlab-ci.yml  .gitmodules  README.md  Release_Notes.md  readme.txt  requirements.txt
bootloader/boot_ram/gemini/: SConstruct  boot_ram.c  bram.ld
bootloader/boot_ram/le501x/: SConstruct  app_config.h  boot_ram_le501x.c  launch.json.txt
bootloader/boot_ram/leo/: SConstruct  app_config.h  boot_ram.c  bram.ld  ext_flash.c  ext_flash.h
bootloader/boot_ram/lm3050/: SConstruct  boot_ram.c  bram.ld
bootloader/boot_ram/qsh/: SConstruct  app_config.h  boot.h  boot_port.h  boot_ram.c  bram.ld  (+2 more)
hal_driver/api/: HAL_def.h  calc_div.h  ls_hal_adc.h  ls_hal_adcv2.h  ls_hal_cache.h  ls_hal_can.h  ls_hal_cap.h  ls_hal_cec.h  ls_hal_comp.h  ls_hal_crc.h  ls_hal_crypt.h  ls_hal_dac.h  ls_hal_dmac.h  ls_hal_dmacv2.h  ls_hal_dmacv3.h  ls_hal_dwuart.h  ls_hal_ecc.h  ls_hal_fdcan.h  ls_hal_flash.h  ls_hal_i2c.h  ls_hal_i3c_conmon.h  ls_hal_i3c_controller.h  ls_hal_i3c_target.h  ls_hal_iwdg.h  ls_hal_iwdgv2.h  ls_hal_kscan.h  ls_hal_mjtag.h  ls_hal_otbn.h  ls_hal_otp_ctrl.h  ls_hal_owm.h  ls_hal_patch.h  ls_hal_pdm.h  ls_hal_pis.h  ls_hal_ps2h.h  ls_hal_pwm.h  ls_hal_rtc.h  ls_hal_rtcv2.h  ls_hal_sha.h  ls_hal_sha512.h  ls_hal_sm4.h  (+18 more)
hal_driver/inc/: hal_flash_int.h  hal_flash_svcall.h  hal_flash_swint.h  i2c_misc.h  i3c_misc.h  ls_hal_qspi.h  ls_hal_qspiv2.h  ls_otbn_ecc.h  ls_otbn_rsa.h  musb_type.h  reg_adc_type.h  reg_adc_typev2.h  reg_adcv2_type.h  reg_cache_type.h  reg_calc_crc_type.h  reg_calc_type.h  reg_can_type.h  reg_cap_type.h  reg_cec_type.h  reg_comp_type.h  reg_crypt_type.h  reg_dac_type.h  reg_dmac_type.h  reg_dmacv2_type.h  reg_dmacv3_type.h  reg_dwtrng_type.h  reg_dwuart_type.h  reg_ecc_type.h  reg_espi_type.h  reg_fdcan_type.h  reg_i2c_type.h  reg_i3c.h  reg_iwdg_type.h  reg_iwdgv2_type.h  reg_kscan_type.h  reg_lcd_type.h  reg_lpc_type.h  reg_lpcv2_type.h  reg_lpti_phy_type.h  reg_ltpi_type.h  (+30 more)
hal_driver/src/: calc_div.c  flash_inst1.c  ls_hal_adc.c  ls_hal_adc_dma.c  ls_hal_adcv2.c  ls_hal_adcv2_dma.c  ls_hal_cache.c  ls_hal_can.c  ls_hal_cap.c  ls_hal_cec.c  ls_hal_comp.c  ls_hal_crc.c  ls_hal_crypt.c  ls_hal_dac.c  ls_hal_dac_dma.c  ls_hal_dmac.c  ls_hal_dmacv2.c  ls_hal_dmacv3.c  ls_hal_dwtrng.c  ls_hal_dwuart.c  ls_hal_dwuart_dma.c  ls_hal_ecc.c  ls_hal_fdcan.c  ls_hal_flash copy.c  ls_hal_flash.c  ls_hal_flash_qspi.c  ls_hal_flash_qspiv2.c  ls_hal_flash_svcall.c  ls_hal_flash_swint.c  ls_hal_i2c.c  ls_hal_i2c_dma.c  ls_hal_i3c_controller.c  ls_hal_i3c_controller_dma.c  ls_hal_i3c_irq.c  ls_hal_i3c_target.c  ls_hal_iwdg.c  ls_hal_iwdgv2.c  ls_hal_kscan.c  ls_hal_mjtag.c  ls_hal_otbn.c  (+32 more)
module/adpcm/: adpcm.c  adpcm.h
module/ble/: ble_common_api.c  ble_common_api.h  builtin_timer.h  ll_buf.c  ls_24g.h  ls_ble.h  ls_mesh.h  ls_sig_mesh.h  ls_sig_mesh_provisioner.h  ls_sys.h  rssi_smoothing_algo.h
module/calendar/: calendar.c  calendar.h
module/common/: async_call.c  async_call.h  circular_doubly_linked_list.c  circular_doubly_linked_list.h  co_error.h  co_list.c  co_list.h  co_math.h  common.c  common.h  linked_async_framework.c  linked_async_framework.h  sw_timer.c  sw_timer.h  sw_timer_int.h  sw_timer_port.h
module/crc/: crc16.h  crc32.c  crc32.h
module/debug/: log.c  log.h  ls_dbg.c  ls_dbg.h
module/embedded-cli/: embedded_cli.h
module/lwip-2.2.1/: CHANGELOG  CMakeLists.txt  SConscript  UPGRADING  codespell_changed_files.sh  codespell_check.sh
module/micro-ecc/: asm_arm.inc  types.h
module/settings/: inflash_settings.c  inflash_settings.h  ota_settings.c  ota_settings.h
module/static_buffer/: fifo.c  fifo.h  linked_buffer.c  linked_buffer.h
module/tinyfs/: tinyfs.c  tinyfs.h  tinyfs_config.h  tinyfs_nvm.c  tinyfs_nvm.h  tinyfs_test.c  tinyfs_write_cache.h
peripheral/api/: io_config.h  lsadc.h  lscache.h  lscrc.h  lscrypt.h  lsdmac.h  lsecc.h  lsi2c.h  lsiwdg.h  lspatch.h  lspdm.h  lspis.h  lsrtc.h  lssha.h  lsspi.h  lsssi.h  lstimer.h  lstrng.h  lsuart.h  spi_flash.h
peripheral/inc/: adc_msp.h  crc_msp.h  dmac_msp.h  flash_svcall.h  i2c_misc.h  i2c_msp.h  lscache_msp.h  lscrypt_msp.h  lsecc_msp.h  lsiwdg_msp.h  lspdm_msp.h  lspis_msp.h  lsqspi.h  lsqspi_msp.h  lsqspiv2.h  lsqspiv2_msp.h  lstimer_msp.h  reg_lsecc_type.h  reg_lsqspiv2_type.h  reg_pis_type.h  reg_ssi_type.h  reg_usb_type.h  rtc_msp.h  sha_msp.h  spi_flash_int.h  spi_msp.h  ssi_msp.h  trng_msp.h  uart_misc.h  uart_msp.h
peripheral/src/: adc_dma.c  dmac.c  flash_svcall.c  lsadc.c  lscache.c  lscrc.c  lscrypt.c  lsecc.c  lsi2c.c  lsiwdg.c  lspatch.c  lspdm.c  lspdm_dma.c  lspis.c  lsqspi.c  lsqspiv2.c  lsrtc.c  lssha.c  lsspi.c  lsspi_dma.c  lsssi.c  lsssi_dma.c  lstimer.c  lstrng.c  spi_flash.c  spi_flash_lsqspi.c  spi_flash_lsqspiv2.c  uart.c  uart_dma.c
soc/: SConscript  compile_flag.h  cpu.h  field_manipulate.h  sdk_config.h  sdk_default_config.h  systick.h
soc/arm_cm/: SConscript  flash_swint_int.h  instructions.c  instructions.h  svcall.c  svcall.h  swint_call_asm.h  swint_handler.c  systick.c
soc/rv32/: SConscript  core_rv32.h  csi_rv32_gcc.h  exception_isr.h  int_call_asm.S  startup.c  swint_call_asm.h  swint_handler.c  systick.c
tools/: Doxyfile  arm-gcc.py  arm-llvm.py  genarate_signature_hex.py  iar.ewp  ide_proj_gen.py  info_sbl_merge.py  mdk.py  progen.py  riscv-gcc.py  rspfile.py  rv_asm_file_call_graph.py  uvision.uvproj
tools/bin2c/: README.md
tools/ci/: Jenkinsfile
tools/gemini/: before_make.bat  ci.yml
tools/le501x/: after_build.bat  ci.yml  hex_target.xml  info_sbl_merge.py  postbuild_iar.bat  uvision.uvproj
tools/leo/: app_desc_gen.py  ci.yml  fw_desc_gen.py  info_sbl_merge.py
tools/lm3050/: before_make.bat  ci.yml  genarate_signature_hex.py  info_sbl_merge.py  prebuild_iar.bat
tools/prog/: JLinkDevices.xml
tools/qsh/: file_merge.py  header_merge.py  header_merge_non_secure.py  header_merge_secure.py  header_show.py
tools/signing/: signing.py
tools/taurus/: gdbinit
tools/web_serialport/: serialPort.html  serialPort.js
zephyr/: CMakeLists.txt  app_config.h  leo_sbl.ld  module.yml  reset_retain.ld  xip_banned.ld
(+2506 files in other folders)
